game complete: players draw cards, score increments based on cards, winner is declared